Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2088

While changing "Application output" tabs the state of "Stop" button goes invalid (for 2 projects running)

    XMLWordPrintable

Details

    • 6e90b519373c55bafd5796e6fea10228eadfbac7

    Description

      I was creating 2 applications at the same time:

      • desktop application (name: udpreceiver)
      • Symbian application (name: untitled223)

      1. Once I've pressed run desktop application and the "Application output" show active "Stop" button as the desktop application is running(desktop_app_running.png)
      2. Then I've pressed run on the symbian application and the "Application output" show active "Stop" button as the Symbian application is running (embeded_app_running.png)
      3. Then I've changed the "Application output" tab to show the desktop application, the "Stop" button is still active as the desktop application is still running (tab_changed_desktop.png)
      4. Then I've changed back to Symbian application "Application output".

      Observed behaviour:

      • The "Stop" button is inactive despite the fact the application is still running, now the "Re-run" button is active. (tab_changed_embeded.png)

      Expected behaviour:

      • The "Stop" button should be active, and be able to terminate the Symbian application. The "Re-run" button should be inactive to prevent re-running application

      All the screenshots are in the attached screenshots.zip file

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jaggernod Paweł Polański
            jaggernod Paweł Polański
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes