Removed unnecessary launch process from S60DeviceDebugRunControl for Symbian Bug QTCREATORBUG-2088 has been fixed Task-number: QTCREATORBUG-2088

Reviewed-by: Friedemann Kleint